# Kelompok-1_Pemograman-Fungsional-B

./: .gitignore  Cargo.toml  Home.vue
app/: package-lock.json  package.json
app/src/: main.ts
app/src-tauri/: tauri.conf.json
app/src/components/: AdminLayout.vue
app/src/router/: index.ts
app/src/views/: BooksView.vue  DashboardView.vue  LoansView.vue  MembersView.vue
backend/: .gitignore  Cargo.toml
backend/src/: book.rs  loan.rs  main.rs  member.rs  search.rs
backend/src/config/: mod.rs
frontend/: index.html  package.json
frontend/src/: App.vue
frontend/src/pages/: Home.vue
